# shrd100_ps_linux

./: .gitignore  .gitlab-ci.yml  README.md  build.sh  build_ci.sh  mk_ota.sh
linux_app/: .gitignore  CMakeLists.txt  README.md  app_build.sh  app_build_no_ad9361.sh  app_pack.sh  app_version_make.sh  build_ci.sh  set_unittest_env.sh  shrd100_ota.ini
linux_app/cfg/: product_debug_cfg.json  product_hw_cfg.json  product_hw_cfg.json.T3  product_hw_cfg.json.T3_1  product_sw_cfg.json  product_sw_cfg.json.SHRD101L  product_sw_cfg.json.SHRD102L  product_sw_cfg.json.SHRD103L  product_sw_cfg.json.SHRD104L  product_sw_cfg.json.SHRD105L  product_sw_cfg.json.SHRD106L
linux_app/src/: CMakeLists.txt  main.cpp
linux_app/src/app/: CMakeLists.txt
linux_app/src/app/alg/: alg_init.c  alg_init.h  axisConvert.c  axisConvert.h  dirCalc.c  dirCalc.h  ifDirCalc.c  ifDirCalc.h
linux_app/src/app/alg/det_alg/: sfAirBorneSniffer.c  sfAirBorneSniffer.h  sfDroneSniffer.c  sfDroneSniffer.h  utils.c  utils.h
linux_app/src/app/alg/droneID/: DSPF_sp_fftSPxSP_cn.c  DSPF_sp_fftSPxSP_cn.h  burst_process_module.c  burst_process_module.h  droneID_main.c  droneID_main.h  droneID_system_param.h  droneID_utils.c  (+5 more)
linux_app/src/eap/: CMakeLists.txt
linux_app/src/eap/airborne_sniffer/: AirBorneSnifferCmdproc.cpp  AirBorneSnifferModule.cpp  AirBorneSnifferThread.cpp  CMakeLists.txt
linux_app/src/eap/algorithm_stub/: CMakeLists.txt  drone_sniffer_alg.c  droneid_alg.c
linux_app/src/eap/alink/: AlinkCmdproc.cpp  AlinkModule.cpp  AlinkThread.cpp  CMakeLists.txt
linux_app/src/eap/alink_pb/: CMakeLists.txt  MavAlink.pb.cc  MavAlink.pb.h  MavAlink.proto  ProductDebugCfg.pb.cc  ProductDebugCfg.pb.h  ProductDebugCfg.proto  ProductHwCfg.pb.cc  ProductHwCfg.pb.h  ProductHwCfg.proto  ProductSwCfg.pb.cc  ProductSwCfg.pb.h  ProductSwCfg.proto  TracerUavMsg.pb.cc  TracerUavMsg.pb.h  TracerUavMsg.proto  gen.bat  gen.sh
linux_app/src/eap/base/: CMakeLists.txt
linux_app/src/eap/bluetooth/: BlueToothCmdproc.cpp  BlueToothModule.cpp  BlueToothThread.cpp  CMakeLists.txt
linux_app/src/eap/drone_sniffer/: CMakeLists.txt  DroneSnifferCmdproc.cpp  DroneSnifferModule.cpp  DroneSnifferThread.cpp
linux_app/src/eap/droneid/: CMakeLists.txt  DroneIdCmdproc.cpp  DroneIdModule.cpp  DroneIdThread.cpp
linux_app/src/eap/frequency/: AutoFreqDetector.cpp  CMakeLists.txt  DefinedFreqDetector.cpp  FreqDetector.cpp  FrequencyCmdproc.cpp  FrequencyModule.cpp  FrequencyThread.cpp  SweepFreqDetector.cpp
linux_app/src/eap/heartbeat/: BuzzerWarning.cpp  CMakeLists.txt  HeartBeatCmdproc.cpp  HeartBeatModule.cpp  HeartBeatThread.cpp  LedWarning.cpp  MotorWarning.cpp  WarningBase.cpp
linux_app/src/eap/include/: CMakeLists.txt
linux_app/src/eap/os_adapter/: CMakeLists.txt
linux_app/src/eap/remoteid/: CMakeLists.txt  RemoteIdBufScanDefaultStrategy.cpp  RemoteIdCmdproc.cpp  RemoteIdModule.cpp  RemoteIdThread.cpp
linux_app/src/eap/resp_msg/: CMakeLists.txt  RespMsgThread.cpp
linux_app/src/eap/spectrum/: AirBorneProc.cpp  CMakeLists.txt  OrientationProc.cpp  SpectrumCmdproc.cpp  SpectrumModule.cpp  SpectrumThread.cpp
linux_app/src/eap/vehicle_mounted/: CMakeLists.txt  VehicleMountedCmdproc.cpp  VehicleMountedModule.cpp  VehicleMountedThread.cpp
linux_app/src/inc/: app_version.h  common_define.h
linux_app/src/srv/: CMakeLists.txt
linux_app/src/srv/bluetooth/: CMakeLists.txt  bluetooth.h  bt_gatt.c  bt_gatt.h  bt_gatt_declaration.c  bt_gatt_declaration.h  bt_gatt_server.c  bt_gatt_server.h  bt_gatt_server_info.c  bt_gatt_server_info.h  bt_utils.c  bt_utils.h  gatt_structs.h  goc_bluetooth.h  goc_gatt_client.h  goc_gatt_server.h  goc_sdk.h
linux_app/src/srv/cli/: CLI_Template.h  CMakeLists.txt  FreeRTOS_CLI.c  FreeRTOS_CLI.h
linux_app/src/srv/log/: CMakeLists.txt  log.c  log.h
linux_app/src/srv/wit/: .WitService.c.swp  CMakeLists.txt  WitService.c  WitService.h  Witd.h
linux_app/src/tracer/: AlinkCommonHal.cpp  AlinkCommonHal.h  CMakeLists.txt  TracerAdcHal.cpp  TracerAdcHal.h  TracerCommonHal.cpp  TracerCommonHal.h  TracerDataPath.cpp  TracerDataPath.h  TracerDeviceHal.cpp  TracerDeviceHal.h  TracerMainHalMgr.cpp  TracerMainHalMgr.h  TracerMainSys.cpp  TracerMainSys.h  TracerUsbHal.cpp  TracerUsbHal.h  TracerUtils_c.cpp  TracerUtils_c.h
linux_app/src/tracer/hal/: hal.c  hal.h
linux_app/src/utils/: CMakeLists.txt
linux_app/src/utils/checksum/: CMakeLists.txt  checksum.c  checksum.h
linux_app/src/utils/data_recorder/: CMakeLists.txt  DataRecorder.cpp  DataRecorder.h  DrvRecorderFormatter.cpp  DrvRecorderFormatter.h  File2Struct.cpp  File2Struct.h  FileOutputStream.cpp  FileOutputStream.h  MsgRecorderFormatter.cpp  MsgRecorderFormatter.h  RecorderFormatter.cpp  RecorderFormatter.h
linux_app/src/utils/dbg_telnet/: CMakeLists.txt
linux_app/src/utils/instrumentor/: CMakeLists.txt  Instrumentor.cpp  Instrumentor.h
linux_app/src/utils/lzma/: CMakeLists.txt  LzmaEnc.c  LzmaUtil.c  Types.h
linux_app/src/utils/rpt_ctrl/: CMakeLists.txt  RptController.cpp  RptController.h
linux_app/tmp/lib/: libev.so.4.0.0  libunwind-aarch64.so.8.0.1  libunwind-coredump.so.0.0.0  libunwind-ptrace.so.0.0.0  libunwind-setjmp.so.0.0.0  libunwind.so.8.0.1
linux_app/unittest/include/gtest/: gtest.h
linux_app/unittest/include/sys/: _stdint.h
linux_app/unittest/main/: CMakeLists.txt  TracerEnvironment.cpp  TracerEnvironment.h  main.cpp
linux_app/unittest/stub/alg/: drone_sniffer_alg.c  droneid_alg.c  spectrum_alg.c
linux_app/unittest/stub/bluetooth/: bluetooth.c
linux_app/unittest/stub/hal/: hal.c  hal.h
linux_app/unittest/stub/pub/: StubFunc.cpp  StubFunc.h  StubHal.cpp  StubHal.h  eap_ut_os_adapter.cpp  simu_app.cpp  simu_app.h
linux_app/unittest/stub/wit/: StubWitService.c
linux_app/unittest/tests/: AlinkMsgTest.cpp  AlinkMsgTest.h  DroneIdTest.cpp  DroneIdTest.h  HalMgrTest.cpp  ProcessCommTest.cpp  ProcessCommTest.h  ProtoBufTest.cpp  ProtoBufTest.hpp  RemoteIdTest.cpp  RemoteIdTest.h  SimuCliTest.cpp  SimuCliTest.h  SysTest.cpp  SysTest.h  ThreadTest.cpp  ThreadTest.h  VehicleMountedTest.cpp  VehicleMountedTest.h
(+260 files in other folders)
