include_directories(${CMAKE_SOURCE_DIR}/src/eap/include/cfg)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/alink_pb)
include_directories(${CMAKE_SOURCE_DIR}/src/inc)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/include/warning)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/include/hal)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/include/pub)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/include/sys)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/include/module)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/include/thread)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/include/os_adapter)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/include/checksum)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/include/cmdproc)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/include/freqdetect)
include_directories(${CMAKE_SOURCE_DIR}/src/app/alg)
include_directories(${CMAKE_SOURCE_DIR}/src/app/alg/droneID)
include_directories(${CMAKE_SOURCE_DIR}/src/srv/log)
include_directories(${CMAKE_SOURCE_DIR}/src/srv/cli)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/alink_pb)
include_directories(${CMAKE_SOURCE_DIR}/src/utils/rpt_ctrl)
include_directories(${CMAKE_SOURCE_DIR}/src/tracer)
include_directories(${CMAKE_SOURCE_DIR}/src/tracer/hal/c2_alink)
include_directories(${CMAKE_SOURCE_DIR}/src/tracer/hal/eth_link/usb_typec)
include_directories(${CMAKE_SOURCE_DIR}/src/tracer/hal/dma)
include_directories(${CMAKE_SOURCE_DIR}/src/tracer/hal/gyro)
include_directories(${CMAKE_SOURCE_DIR}/src/tracer/hal/pwrbutton)
include_directories(${CMAKE_SOURCE_DIR}/src/tracer/hal/i2c)
include_directories(${CMAKE_SOURCE_DIR}/src/tracer/hal/tmp75c)
include_directories(${CMAKE_SOURCE_DIR}/src/tracer/hal/ads1115)
include_directories(${CMAKE_SOURCE_DIR}/src/tracer/hal/aaps_info)
include_directories(${CMAKE_SOURCE_DIR}/src/tracer/hal/nvram)
include_directories(${CMAKE_SOURCE_DIR}/src/eap/alink_pb)

if (PRODUCT)
	include_directories(${CMAKE_SOURCE_DIR}/src/tracer/hal)
	aux_source_directory(./hal DIR_LIB_SRCS)
	aux_source_directory(./hal/gpio DIR_LIB_SRCS)
	aux_source_directory(./hal/output DIR_LIB_SRCS)
	aux_source_directory(./hal/input DIR_LIB_SRCS)
	aux_source_directory(./hal/ad9361 DIR_LIB_SRCS)
	aux_source_directory(./hal/gyro DIR_LIB_SRCS)
	aux_source_directory(./hal/pwrbutton DIR_LIB_SRCS)
	aux_source_directory(./hal/switch_filter DIR_LIB_SRCS)
	aux_source_directory(./hal/remoteid_wifi DIR_LIB_SRCS)
	aux_source_directory(./hal/c2_alink/analysis DIR_LIB_SRCS)
	aux_source_directory(./hal/c2_alink/check DIR_LIB_SRCS)
	aux_source_directory(./hal/c2_alink/upload DIR_LIB_SRCS)
	aux_source_directory(./hal/c2_alink/upgrade DIR_LIB_SRCS)
	aux_source_directory(./hal/c2_alink/ DIR_LIB_SRCS)
	aux_source_directory(./hal/c2_network DIR_LIB_SRCS)
	aux_source_directory(./hal/eth_link/socket DIR_LIB_SRCS)
	aux_source_directory(./hal/eth_link/usb_typec DIR_LIB_SRCS)
	aux_source_directory(./hal/eth_link DIR_LIB_SRCS)
	aux_source_directory(./hal/dma DIR_LIB_SRCS)
	aux_source_directory(./hal/i2c DIR_LIB_SRCS)
	aux_source_directory(./hal/tmp75c DIR_LIB_SRCS)
	aux_source_directory(./hal/aaps_info DIR_LIB_SRCS)
	aux_source_directory(./hal/ads1115 DIR_LIB_SRCS)
	aux_source_directory(./hal/nvram DIR_LIB_SRCS)
	aux_source_directory(./hal/libattery DIR_LIB_SRCS)
endif(PRODUCT)

aux_source_directory(. DIR_LIB_SRCS)
add_library(tracer ${DIR_LIB_SRCS})
set(TRACER_LIBS tracer PARENT_SCOPE)
target_link_libraries(tracer json-c)


