include_directories(../../include/cmdproc)
include_directories(../../include/hal)
include_directories(../../include/module)
include_directories(../../include/pub)
include_directories(../../include/sys)
include_directories(../../include/thread)
include_directories(../../include/os_adapter)
include_directories(${CMAKE_SOURCE_DIR}/src/srv/log)
include_directories(${CMAKE_SOURCE_DIR}/src/srv/cli)
include_directories(${CMAKE_SOURCE_DIR}/src/utils/data_recorder)

aux_source_directory(. DIR_LIB_SRCS)
add_library(base_hal ${DIR_LIB_SRCS})
set (HAL_BASE_LIBS base_hal PARENT_SCOPE)
