include_directories(../../include/cmdproc)
include_directories(../../include/hal)
include_directories(../../include/module)
include_directories(../../include/pub)
include_directories(../../include/sys)
include_directories(../../include/thread)
include_directories(../../include/os_adapter)
include_directories(${CMAKE_SOURCE_DIR}/src/srv/log)
include_directories(${CMAKE_SOURCE_DIR}/src/srv/cli)

aux_source_directory(. DIR_LIB_SRCS)
add_library(module ${DIR_LIB_SRCS})
set (MODULE_BASE_LIBS module PARENT_SCOPE)
